--- a/src/app/components/inventories/all-inventario-cliente/all-inventario-cliente.component.html
+++ b/src/app/components/inventories/all-inventario-cliente/all-inventario-cliente.component.html
@@ -2,14 +2,14 @@
     <div class="card">
         <br>
         <div class="card-header">
-            <div class="row mx-3"  >
+            <div class="row mx-3">
                 <fa-icon [icon]="faUserFriends" [size]="'3x'" style="color: #636363;"></fa-icon>
                 <h1 class="mx-5 " style="color: #636363;">Inventario General</h1>
                 <div style="position: absolute;right:200px;" class="mx-3" *ngIf="mostrarDiv">
-                  
+
                 </div>
                 <div style="position: absolute;right:0;" class="mx-3" *ngIf="mostrarDiv">
-                
+
                 </div>
             </div>
         </div>
@@ -17,69 +17,62 @@
             <div>
                 <mat-grid-list cols="6" rowHeight="50px">
                     <mat-grid-tile>
-                        <a class="btn button" 
-                        (click)="navegar()"
-                            style="text-align:center;
+                        <a class="btn button" (click)="navegar()" style="text-align:center;
                                     font-size: 15px; width:140px; 
                                        height:35px;
                                        text-align:center; 
                                        margin-top: 10px;
-                                       background: rgb(54,169,225,0.8);"
-                        ><span style="color: white;">
-                            Volver
-                        </span>
-                        
+                                       background: rgb(54,169,225,0.8);"><span style="color: white;">
+                                Volver
+                            </span>
+
                         </a>
 
-                        
-                        </mat-grid-tile>
-                        <mat-grid-tile>
-                            <a class="btn button" 
-                            (click)="exportarAXLSX()"
-                                style="text-align:center;
+
+                    </mat-grid-tile>
+                    <mat-grid-tile>
+                        <a class="btn button" (click)="exportarAXLSX()" style="text-align:center;
                                         font-size: 15px; width:140px; 
                                            height:35px;
                                            text-align:center; 
                                            margin-top: 10px;
-                                           background: rgba(19, 180, 54, 0.753);"
-                            ><span style="color: white;">
+                                           background: rgba(19, 180, 54, 0.753);"><span style="color: white;">
                                 <fa-icon [icon]="faTable" style="color: white;"></fa-icon>
                                 Exportar
                             </span>
-                            
-                            </a>
-    
-                            
-                            </mat-grid-tile>
+
+                        </a>
+
+
+                    </mat-grid-tile>
 
                 </mat-grid-list>
                 <mat-grid-list cols="6" rowHeight="60px">
                     <mat-grid-tile *ngFor="let card of lstCategorias">
-                        
-                            <a class="btn button" (click)="buscarPortafolioLinea(card)" 
-                                style="border-radius: 5px; 
+
+                        <a class="btn button" (click)="buscarPortafolioLinea(card)" style="border-radius: 5px; 
                                        background: rgb(49,99,173,0.8); 
                                        font-size: 15px; width:140px; 
                                        height:40px;
                                        text-align:center; 
                                        margin-top: 15px;
                                        ;">
-                                <span style="color: white;">
-                                        {{card.categoria}}
-                                </span>
-                            </a>
-                        
-                        
+                            <span style="color: white;">
+                                {{card.categoria}}
+                            </span>
+                        </a>
+
+
                     </mat-grid-tile>
                 </mat-grid-list>
             </div>
 
             <br><br>
-            
 
 
 
-            <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover" id="table_id" >
+
+            <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover" id="table_id">
                 <thead style="color: #636363;">
                     <tr>
                         <th style="width: 50%; ">PRODUCTO</th>
