--- a/src/app/components/shooping/ver-compra/ver-compra.component.html
+++ b/src/app/components/shooping/ver-compra/ver-compra.component.html
@@ -6,6 +6,9 @@
                 <fa-icon [icon]="faFileInvoice" [size]="'3x'" style="color: #636363"></fa-icon>
                 <h1 class="mx-5" style="color: #636363">FACTURA</h1>
             </div>
+            <div class="ml-auto text-right pr-3" style="color: #888888; font-size: 14px;">
+                <strong>Comprando en: </strong>{{nombreAlmacenCompra}}
+            </div>
         </div>
         <div class="card-body">
             <div class="invoice-header">
