--- a/src/app/components/users/tercerosusuarios/tercerosusuarios.component.html
+++ b/src/app/components/users/tercerosusuarios/tercerosusuarios.component.html
@@ -6,7 +6,16 @@
                 <fa-icon [icon]="faUserFriends" [size]="'3x'" style="color: #636363;"></fa-icon>
                 <h1 class="mx-5 " style="color: #636363;">Usuarios(Terceros)</h1>
                 <div style="position: absolute;right:0;" class="mx-3">
-                    <fa-icon [icon]="faPlus" class="btn btn-success" [size]="'lg'" data-toggle="tooltip" data-placement="bottom" title="Agregar un nuevo usuario" (click)="agregarTerceros()"></fa-icon>
+
+                    <fa-icon [icon]="faTable" class="btn btn-success" [size]="'lg'" data-toggle="tooltip"
+                    data-placement="bottom" title="Exportar"
+                    (click)="exportarAXLSX()"
+                        
+                    ></fa-icon>
+
+                    <fa-icon [icon]="faPlus" class="btn btn-success" [size]="'lg'" data-toggle="tooltip" data-placement="bottom" title="Agregar un nuevo usuario" (click)="agregarTerceros()"
+                    style="margin-left: 5px;"
+                    ></fa-icon>
                 </div>
             </div>
         </div>
