--- a/src/app/components/warehouses/almacenessociedad/almacenessociedad.component.html
+++ b/src/app/components/warehouses/almacenessociedad/almacenessociedad.component.html
@@ -6,7 +6,17 @@
                 <fa-icon [icon]="faUserFriends" [size]="'3x'" style="color: #636363;"></fa-icon>
                 <h1 class="mx-5 " style="color: #636363;">Almacenes</h1>
                 <div style="position: absolute;right:0;" class="mx-3">
-                    <fa-icon [icon]="faPlus" class="btn btn-success" [size]="'lg'" data-toggle="tooltip" data-placement="bottom" title="Agregar una nueva sociedad" (click)="agregarAlmacenes()"></fa-icon>
+
+                    <fa-icon [icon]="faTable" class="btn btn-success" [size]="'lg'" data-toggle="tooltip"
+                        data-placement="bottom" title="Exportar" (click)="exportarAXLSX()"></fa-icon>
+
+                    <fa-icon [icon]="faPlus" class="btn btn-success" [size]="'lg'" data-toggle="tooltip"
+                        data-placement="bottom" title="Agregar una nueva sociedad"
+                        (click)="agregarAlmacenes()"
+                        style="margin-left: 5px;"
+                        ></fa-icon>
+
+
                 </div>
             </div>
         </div>
@@ -31,8 +41,12 @@
                         <td>{{almacen.pto_emision}}</td>
                         <td>
                             <span [attr.data-almacen]="almacen | json">
-                                <fa-icon [icon]="faEdit" class="btn btn-info editar-icon" [size]="'sm'" style="margin-right: 5px;" data-placement="bottom" title="Editar Almacen" (click)="editarAlmacenes(almacen)"></fa-icon>
-                                <fa-icon [icon]="faTrashAlt" class="btn btn-danger delete-icon" [size]="'lg'" data-placement="bottom" title="Eliminar Almacen" (click)="eliminarAlmacenes(almacen)"></fa-icon>
+                                <fa-icon [icon]="faEdit" class="btn btn-info editar-icon" [size]="'sm'"
+                                    style="margin-right: 5px;" data-placement="bottom" title="Editar Almacen"
+                                    (click)="editarAlmacenes(almacen)"></fa-icon>
+                                <fa-icon [icon]="faTrashAlt" class="btn btn-danger delete-icon" [size]="'lg'"
+                                    data-placement="bottom" title="Eliminar Almacen"
+                                    (click)="eliminarAlmacenes(almacen)"></fa-icon>
                             </span>
                         </td>
                     </tr>
