Cambios Ayuda en el dashboard

--- a/src/app/components/dashboard-cl/dashboard-cl.component.html
+++ b/src/app/components/dashboard-cl/dashboard-cl.component.html
@@ -1,38 +1,38 @@
 <div class="grid-container">
-  <h1 class="mat-h1"></h1>
-    <div style="text-align: right;">
-        <button mat-button [matMenuTriggerFor]="menu" class="material-icons-outlined" style="font-size: 30px ;color: #3163ad">
-            <img  class="circular--square" src="https://atiendo.ec/black/img/anime3.png" 
-                width="35" height="35"><mat-icon class="mat-18">ligature</mat-icon>
-        </button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <mat-menu #menu="matMenu">
-            <a [routerLink]="[{ outlets: { contentClient: ['usuario'] } }]" class="mat-menu-item">Perfil</a>
-            <a [routerLink]="[{ outlets: { contentClient: ['cofiguracion-user'] } }]" class="mat-menu-item">Configuracion</a>
-            <a class="mat-menu-item" (click)="logout()">Salir</a>
-        
-        </mat-menu>                   
-    </div>
-    <mat-grid-list [cols]="getGridCols()" [rowHeight]="getRowHeight()">
-    <mat-grid-tile *ngFor="let card of cards | async" [colspan]="card.cols" [rowspan]="card.rows">
-        <mat-card class="dashboard-card" [ngClass]="{ 'disabled-card': card.title === 'Pedido Sugerido' }">
-            <mat-card-header>
-                <mat-card-title>
-                    <span class="material-icons-outlined" style="font-size: 40px ; color: #3163ad">{{card.figure}}</span>
-                    <br><br>
-                    <a href={{card.dir}} style="text-decoration: none;">
-                        <p style="color: black; font-size:30px;font-weight: normal;">
-                            {{card.title}}
-                        </p>
-                    </a>
-                </mat-card-title>
-            </mat-card-header>
-            <mat-card-content class="dashboard-card-content">
-                <div>
-                    Informacion  acerca <br> de {{card.name}} <br>
-                    <br>
-                </div>
-            </mat-card-content>
-        </mat-card>
-    </mat-grid-tile>
-</mat-grid-list>
+    <h1 class="mat-h1"></h1>
+      <div style="text-align: right;">
+          <button mat-button [matMenuTriggerFor]="menu" class="material-icons-outlined" style="font-size: 30px ;color: #3163ad">
+              <img  class="circular--square" src="https://atiendo.ec/black/img/anime3.png" 
+                  width="35" height="35"><mat-icon class="mat-18">ligature</mat-icon>
+          </button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <mat-menu #menu="matMenu">
+              <a [routerLink]="[{ outlets: { contentClient: ['usuario'] } }]" class="mat-menu-item">Perfil</a>
+              <a [routerLink]="[{ outlets: { contentClient: ['cofiguracion-user'] } }]" class="mat-menu-item">Configuracion</a>
+              <a class="mat-menu-item" (click)="logout()">Salir</a>
+          </mat-menu>                   
+      </div>
+      <mat-grid-list [cols]="getGridCols()" [rowHeight]="getRowHeight()">
+          <mat-grid-tile *ngFor="let card of cards | async" [colspan]="card.cols" [rowspan]="card.rows">
+              <mat-card class="dashboard-card" [ngClass]="{ 'disabled-card': card.title === 'Pedido Sugerido' }">
+                  <mat-card-header>
+                      <mat-card-title>
+                          <span class="material-icons-outlined" style="font-size: 40px ; color: #3163ad">{{card.figure}}</span>
+                          <br><br>
+                          <a [href]="card.dir" [target]="card.dir === 'https://www.google.com' ? '_blank' : '_self'" style="text-decoration: none;">
+                              <p style="color: black; font-size:30px;font-weight: normal;">
+                                  {{card.title}}
+                              </p>
+                          </a>
+                      </mat-card-title>
+                  </mat-card-header>
+                  <mat-card-content class="dashboard-card-content">
+                      <div>
+                          Información acerca <br> de {{card.name}} <br>
+                          <br>
+                      </div>
+                  </mat-card-content>
+              </mat-card>
+          </mat-grid-tile>
+      </mat-grid-list>
   </div>
+  
