--- a/src/app/components/sales/almacenesegresos/almacenesegresos.component.html
+++ b/src/app/components/sales/almacenesegresos/almacenesegresos.component.html
@@ -10,7 +10,7 @@
             </div>
         </div>
         <div class="card-body ">
-            <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover" id="dtdt">
+            <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover" id="dataTable">
                 <thead style="color: #636363;">
                     <tr>
                         <th style="width: 20%; ">Nombre</th>
@@ -29,14 +29,16 @@
                         <td>{{almacen.codigo}}</td>
                         <td>{{almacen.pto_emision}}</td>
                         <td>
-                            <span [attr.data-almacen]="almacen | json">
-                            <a class="btn button ver-icon" (click)="abrirVista(almacen)" style="border-radius: 5px; 
+                            <span>
+                            <a class="btn button entrar-btn" (click)="abrirVista(almacen)" style="border-radius: 5px; 
                                      background: rgb(49,99,173,0.8); 
                                      font-size: 15px; width:120px; 
-                                     heightd:35px;
                                      text-align:center; 
                                      margin-top: 10px;
-                                     ">
+                                     "
+                                      [attr.data-almacen]="almacen | json"
+                                     
+                                     >
                                 <span style="color:white">
                                     ENTRAR
                                 </span>
