--- a/src/app/components/shooping/compra-nuevo/compra-nuevo.component.html
+++ b/src/app/components/shooping/compra-nuevo/compra-nuevo.component.html
@@ -27,6 +27,7 @@
             <thead style="color: #636363;" class="fixed-header">
                 <tr>
                     <th style="width: 10%;">CÓDIGO</th>
+                    <th style="width: 10%;" *ngIf="esPlasticaucho">COD SAP</th>
                     <th style="width: 10%;">PRODUCTO</th>
                     <th style="width: 10%;">ETIQUETAS</th>
                     <th style="width: 10%;">TAMAÑO</th>
@@ -40,6 +41,7 @@
             <tbody style="color: #767695;">
                 <tr *ngFor="let proveedorProducto of lstProveedoresProductos" class="table-row">
                     <td>{{proveedorProducto.producto_id}}</td>
+                    <td *ngIf="esPlasticaucho">{{proveedorProducto.cod_sap}}</td>
                     <td>{{proveedorProducto.nombre_producto}}</td>
                     <td>{{proveedorProducto.etiquetas}}</td>
                     <td>{{proveedorProducto.tamanio}}</td>
