--- a/src/app/components/dashboard-cl/dashboard-cl.component.html
+++ b/src/app/components/dashboard-cl/dashboard-cl.component.html
@@ -18,7 +18,7 @@
                       <mat-card-title>
                           <span class="material-icons-outlined" style="font-size: 40px ; color: #3163ad">{{card.figure}}</span>
                           <br><br>
-                          <a [href]="card.dir" [target]="card.dir === 'https://www.google.com' ? '_blank' : '_self'" style="text-decoration: none;">
+                          <a [href]="card.dir" [target]="card.dir === 'https://docs-atiendo.vercel.app/' ? '_blank' : '_self'" style="text-decoration: none;">
                               <p style="color: black; font-size:30px;font-weight: normal;">
                                   {{card.title}}
                               </p>
