--- a/src/app/components/sales/ver-carrito/ver-carrito.component.html
+++ b/src/app/components/sales/ver-carrito/ver-carrito.component.html
@@ -67,7 +67,7 @@
       </table>
       <button class="btn button btn-success"   style="border-radius: 5px; font-size: 15px; width:120px; height:35px; text-align:center; margin-top: 10px;" (click)="facturar()">
         <span style="color: white;">
-            FACTURAR
+            AGREGAR
         </span>
       </button>
     </div>
