--- a/src/app/components/sales/ver-factura/ver-factura.component.html
+++ b/src/app/components/sales/ver-factura/ver-factura.component.html
@@ -55,7 +55,7 @@
           </thead>
           <tbody style="color: #767695;">
             <tr *ngFor="let detalleMovimientos of lstDetalleMovimientos">
-              <td>{{detalleMovimientos.producto_nombre}}</td>
+              <td>{{detalleMovimientos.modelo_producto_nombre}} {{detalleMovimientos.tamanio}}</td>
               <td>{{detalleMovimientos.cantidad}}</td>
               <td>{{detalleMovimientos.costo}}</td>
               <td>{{detalleMovimientos.precio}}</td>
