--- a/src/app/components/sales/descargar-inventario/descargar-inventario.component.html
+++ b/src/app/components/sales/descargar-inventario/descargar-inventario.component.html
@@ -85,7 +85,7 @@
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal"
           (click)="closeModal()"
-        >Cerrar</button>
+        >Cancelar</button>
         <button type="button" class="btn btn-primary"
             (click)="descargarInventario()"
         >Confirmar</button>
