--- a/src/app/components/sales/factura/factura.component.html
+++ b/src/app/components/sales/factura/factura.component.html
@@ -55,7 +55,7 @@
         <tbody>
           <tr *ngFor="let detalleMovimientos of lstDetalleMovimientos">
             <td>{{detalleMovimientos.producto_id}}</td>
-            <td>{{detalleMovimientos.producto_nombre}}</td>
+            <td>{{detalleMovimientos.modelo_producto_nombre}} {{detalleMovimientos.tamanio}}</td>
             <td>{{detalleMovimientos.cantidad}}</td>
             <td>{{detalleMovimientos.costo}}</td>
             <td>{{detalleMovimientos.desc_add}}</td>
