--- a/src/app/components/sales/ver-factura/ver-factura.component.html
+++ b/src/app/components/sales/ver-factura/ver-factura.component.html
@@ -179,7 +179,7 @@
     <br><br>
     <div class="button-container">
       <button class="btn btn-primary" [disabled]="!esRestoCero" (click)="finalizarPedido()">
-        <span style="color: white; font-size: 20px;"> FINALIZAR VENTA </span>
+        <span style="color: white; font-size: 20px;"> FACTURAR </span>
       </button>
     </div>
   </div>
